02_object_types/dictionaries.txt
>>> chai_types = {"Masala":"Spicy", "Ginger":"zesty", "Green": "Mild"}
>>> chai_types
{'Masala': 'Spicy', 'Ginger': 'zesty', 'Green': 'Mild'}
>>> chai_types["Masala"]
'Spicy'
>>> chai_types.get("Ginger")
'zesty'
>>> chai_types["Masalaa"]
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
    chai_types["Masalaa"]
    ~~~~~~~~~~^^^^^^^^^^^
KeyError: 'Masalaa'
>>> chai_types.get("Gingerr")
>>> chai_types
{'Masala': 'Spicy', 'Ginger': 'zesty', 'Green': 'Mild'}
>>> chai_types["Green"] = "Fresh"
>>> chai_types
{'Masala': 'Spicy', 'Ginger': 'zesty', 'Green': 'Fresh'}
>>> for chai in chai_types:
...     print(chai)
...
Masala
Ginger
Green
>>> for chai in chai_types:
...     print(chai, chai_types[chai])
...
Masala Spicy
Ginger zesty
Green Fresh
>>> for key,values in chai_types.items():
...     print(key, values)
...
Masala Spicy
Ginger zesty
Green Fresh
>>> # in dic all the operations are related to keys by default
>>>
>>> if "Masala" in chai_types:
...     print("I have masala chai")
...
I have masala chai
>>> print(len(chai_types))
3
>>> # len count items
>>>
>>> chai_-types
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
    chai_-types
    ^^^^^
NameError: name 'chai_' is not defined. Did you mean: 'chai'?
>>> chai_types
{'Masala': 'Spicy', 'Ginger': 'zesty', 'Green': 'Fresh'}
>>> chai_types["Earl grey"] = "Citrus"
>>> chai_types
{'Masala': 'Spicy', 'Ginger': 'zesty', 'Green': 'Fresh', 'Earl grey': 'Citrus'}
>>> chai_types.pop("Ginger")
'zesty'
>>> chai_types
{'Masala': 'Spicy', 'Green': 'Fresh', 'Earl grey': 'Citrus'}
>>> chai_items.popitems()
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
    chai_items.popitems()
    ^^^^^^^^^^
NameError: name 'chai_items' is not defined
>>> chai_types.popitem()
('Earl grey', 'Citrus')
>>> chai_types
{'Masala': 'Spicy', 'Green': 'Fresh'}
>>> del chai_types["Green"]
>>> chai_types
{'Masala': 'Spicy'}
>>> chai_types_copy = chai_types.copy()
>>> chai_types_copy
{'Masala': 'Spicy'}
>>>
>>> # dict con contain dict
>>>
>>> tea_shop = {
... "chai": {"Masala": "Spicy", "Ginger": "zesty"},
... "Tea" : {"Green" : "Mild", "Black": "Strong}
  File "<stdin>", line 3
    "Tea" : {"Green" : "Mild", "Black": "Strong}
                                        ^
SyntaxError: unterminated string literal (detected at line 3)
>>> tea_shop = {
... "chai": {"Masala": "Spicy", "Ginger": "zesty"},
... "Tea" : {"Green" : "Mild", "Black": "Strong"}
... }
>>> print(tea_shop)
{'chai': {'Masala': 'Spicy', 'Ginger': 'zesty'}, 'Tea': {'Green': 'Mild', 'Black': 'Strong'}}
>>> tea_shop["chai"]
{'Masala': 'Spicy', 'Ginger': 'zesty'}
>>> tea_shop["chai"]["Ginger"]
'zesty'
>>>
>>> squared_num = {x : x**2 for x in range(10)}
>>> squared_num
{0: 0, 1: 1, 2: 4, 3: 9, 4: 16, 5: 25, 6: 36, 7: 49, 8: 64, 9: 81}
>>> squared_num.clear()
>>> squared_num
{}
>>>
>>> keys = ["Masala", "Ginger", "Lemon"]
>>> keys
['Masala', 'Ginger', 'Lemon']
>>> default_value = "Delicious"
>>> new_dict = dict.fromkeys(keys, default_value)
>>> new_dict
{'Masala': 'Delicious', 'Ginger': 'Delicious', 'Lemon': 'Delicious'}
>>>
>>> new_dict = dict.fromkeys(keys, keys)
>>> new_dict
{'Masala': ['Masala', 'Ginger', 'Lemon'], 'Ginger': ['Masala', 'Ginger', 'Lemon'], 'Lemon': ['Masala', 'Ginger', 'Lemon']}